Fixed redmine 2813 note 23.  The gene autocomplete dialog overflowed the page and had bad css.

--- a/src/hg/htdocs/style/jquery-ui.css
+++ b/src/hg/htdocs/style/jquery-ui.css
@@ -349,7 +349,11 @@
  *
  * http://docs.jquery.com/UI/Autocomplete#theming
  */
-.ui-autocomplete { position: absolute; cursor: default; }	
+.ui-autocomplete { position: absolute; cursor: default; 
+	overflow: scroll;
+    font-family: arial, Geneva, Helvetica, san-serif;
+	font-size: .7em;
+}	
 
 /* workarounds */
 * html .ui-autocomplete { width:1px; } /* without this, the menu expands to 100% in IE6 */
